// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Attio's identifyUser destination action: all fields 1`] = `
Object {
  "data": Object {
    "values": Object {
      "email_addresses": "kojeh@hiana.tg",
      "testType": "Jy5OvBwOqr",
    },
  },
}
`;

exports[`Testing snapshot for Attio's identifyUser destination action: required fields 1`] = `
Object {
  "data": Object {
    "values": Object {
      "email_addresses": "kojeh@hiana.tg",
    },
  },
}
`;
